==> redmorningcn/HXN3-/uCOS-II/APP_TEST/OCM800600T80/hmi_user_uart.c <==


#include "hmi_user_uart.h"

/*----------------------------------------------------------------------------------------
**                          1. 基于8051平台串口驱动
/*----------------------------------------------------------------------------------------

/****************************************************************************
* 名    称： Uartinti()
* 功    能： 串口初始化
* 入口参数： 无      
* 出口参数： 无
****************************************************************************/
#define MHz     1000000U           // 定义 MHz
#define gCLK    (11.0592*MHz)      // 系统时钟频率
#define UART_BAUD   9600           // 定义所用的波特率
sbit BUSY=P3^2;  //H:已收到数据并在处理中,L:空闲可接收数据
void UartInit()
{ 
  //通常用法的 51单片机 UART 0 初始化程序
    SCON  = 0x50;               // Mode 1: 8-bit UART, 允许接收
    TMOD |= 0x20;               // 定时器1 Mode 2: 8-Bit reload
    PCON  = 0x80;               // SMOD = 1
    TH1   = 256 - (uchar)(gCLK/192.0F/UART_BAUD);
    TR1   = 1;                  // 定时器 1 启动
    IE |=0X90;     //Enable Serial Interrupt //ES    = 0;                  // 串行中断允许  
  }

void WaitNoBusy(void)
{
while(BUSY);//p3.2接上拉电阻,接忙信号
}
/*****************************************************************
* 名    称： SendChar()
* 功    能： 发送1个字节
* 入口参数： t  发送的字节       
* 出口参数： 无                  
 *****************************************************************/
void  SendChar(uchar t) 
 {
    SBUF=t;
    while(TI==0);
    TI=0;            
 } 
/*****************************************************************
* 名    称： SendStrings()
* 功    能： 发送字符串
* 入口参数： str  发送的字符串     
* 出口参数： 无               
 *****************************************************************/

 void SendStrings(uchar *str)
 {
     while(*str)
	 {
	  SendChar(*str);
	  str++;
	 }
 } 

/*****************************************************************
* 名    称： serial()
* 功    能： 串口接收中断
* 入口参数： 无  
* 出口参数： 无               
*****************************************************************/
uchar  temprxd;

void serial () interrupt 4 
{
    if(RI)
    {   
       RI = 0;
       temprxd = SBUF;
	}
}
